<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintDimensionRatio="16:9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates_regular"
        android:text="@string/main_screen"
        android:textColor="@color/light_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/historyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/historyButton" />

    <ImageView
        android:id="@+id/languageSelector"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/change_language"
        android:src="@drawable/baseline_language_24"
        app:layout_constraintBottom_toBottomOf="@+id/historyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/historyButton"
        app:tint="@color/green" />


    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_alternates_regular"
        android:backgroundTint="@color/gray_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/languageSelector"
        android:layout_marginEnd="16dp"/>

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="124dp"
        android:adjustViewBounds="false"
        android:background="@color/background"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <LinearLayout
        android:id="@+id/sourceButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/previewImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_green"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_alternates_regular"
            />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_green"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_alternates_regular"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/enhanceButton"
        android:layout_width="286dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green"
        android:text="@string/improve"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_alternates_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sourceButtons" />

</androidx.constraintlayout.widget.ConstraintLayout>